# esp32vario-xcsoar

./: Cargo.toml  README.md  cfg.toml  rust-toolchain.toml
src/: main.rs
src/util/: nmea.rs  sensors.rs  tcp_client.rs  wifi.rs
src/util/sensors/accelerometer_gyro/: mpu9250.rs
src/util/sensors/barometer/: bmp280.rs
src/util/sensors/gps/: atgm336h.rs
