[package]
name = "esp32vario-xcsoar-std"
version = "0.1.0"
authors = ["LuMarans"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp32vario-xcsoar-std"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.44.1"
embedded-svc = "0.28.0"
toml-cfg = "0.2.0"
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
